src/test/resources/scripts/language/parser/valid/if/if.sbsc
// test basic if expression

(if(true) 5 else 4) == 5
&&
(if(false) 5 else 4) == 4