src/test/resources/scripts/language/parser/invalid/coercion/returnCaseMismatch.sbsc
// mismatched if returns

a = if(true) 4 else "hello";

return false;